--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
       <section id="hero" class="hero homepage-background item-center text-light">
         <h1>League of Legends</h1>
-        <p class="subheading">Great game for the mentally prepared.</p>
+        <p class="subheading">Great game for the competitive.</p>
         <button><a href="install.html">Go to install page</a></button>
       </section>
       <div class="columns container-spacing bg-accent">
@@ -47,9 +47,9 @@
           </p>
         </section>
         <aside class="col-1 spacing bg-dark text-light box-shadow">
-          <h2>Why do people like League of Legends?</h2>
+          <h2>Why should you play League of Legends?</h2>
           <p>
-            Good question. Although it can push into a very toxic mentality, the
+            Good question! Although it can be a difficult game to master, the
             competitive drive for most people is enough for one person to keep
             playing the game.
           </p>
@@ -67,17 +67,17 @@
         <article class="col-1 spacing box-shadow">
           <h2>Is the game fun?</h2>
           <p>
-            Objectively, this game is not fun. Looking at statistics, you will
-            never achieve anything in this game. However, the competitive drive
+            Great with friends, but difficult competitive environnment. It will be
+            difficult for you to achieve greatness. However, the competitive drive
             to prove someone wrong is something to behold.
           </p>
         </article>
         <article class="col-1 spacing box-shadow">
           <h2>Should I play League of Legends?</h2>
           <p>
-            Go ahead! I mean, the install link is right above there. You can
-            install it. You can do whatever you want with it. But are you
-            willing to commit arson? Who knows. You pick. You're the adult.
+            For the prepared, try and play League of Legends. As the name states,
+            It is only a League for the Legends; the best of the best, and the most
+            driven one goes to the top.
           </p>
         </article>
       </section>
