--- a/install.html
+++ b/install.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>League of Legends (Spoilers, very toxic community.)</title>
+    <title>League of Legends</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -24,13 +24,13 @@
     <main>
       <section id="hero" class="hero install-background item-center text-light">
         <h1>League of Legends</h1>
-        <p class="subheading">Ruin your life playing this game.</p>
+        <p class="subheading">Start your journey here.</p>
         <button><a href="https://signup.na.leagueoflegends.com/en/signup/index">Sign up. You won't.</a></button>
       </section>
     </main>
     <footer>
       <p class="text-center text-accent">
-        &copy; 2022 Takuya Toyokawa | dont blame me for your addictions.
+        &copy; 2022 Takuya Toyokawa | Comes with a slight addictive flavor.
       </p>
     </footer>
   </body>
